@@ -54,6 +54,9 @@ extern "C" {
  *
  * Not in IPMI spec.  In "Platform Management FRU Information Storage
  * Definition" document.
+ *
+ * Starting w/ FRU Revision 1.2, this table is defined by SMBIOS
+ * specification, Table 16 - "System Enclosure or Chassis Types"
  */
 
 #define IPMI_FRU_CHASSIS_TYPE_OTHER                 0x01
@@ -79,11 +82,17 @@ extern "C" {
 #define IPMI_FRU_CHASSIS_TYPE_PERIPHERAL_CHASSIS    0x15
 #define IPMI_FRU_CHASSIS_TYPE_RAID_CHASSIS          0x16
 #define IPMI_FRU_CHASSIS_TYPE_RACK_MOUNT_CHASSIS    0x17
+#define IPMI_FRU_CHASSIS_TYPE_SEALED_CASE_PC        0x18
+#define IPMI_FRU_CHASSIS_TYPE_MULTI_SYSTEM_CHASSIS  0x19
+#define IPMI_FRU_CHASSIS_TYPE_COMPACT_PCI           0x1A
+#define IPMI_FRU_CHASSIS_TYPE_ADVANCED_TCA          0x1B
+#define IPMI_FRU_CHASSIS_TYPE_BLADE                 0x1C
+#define IPMI_FRU_CHASSIS_TYPE_BLADE_ENCLOSURE       0x1D
 
 /* To avoid gcc warnings, add +1 in comparison */
 #define IPMI_FRU_CHASSIS_TYPE_VALID(__chassis_type) \
   (((__chassis_type + 1) >= (IPMI_FRU_CHASSIS_TYPE_OTHER + 1) \
-    && (__chassis_type) <= IPMI_FRU_CHASSIS_TYPE_RACK_MOUNT_CHASSIS) ? 1 : 0)
+    && (__chassis_type) <= IPMI_FRU_CHASSIS_TYPE_BLADE_ENCLOSURE) ? 1 : 0)
 
 extern const char *const ipmi_fru_chassis_types[];
 
